--- a/_includes/page__hero.html
+++ b/_includes/page__hero.html
@@ -9,7 +9,7 @@
 {% if page.header.image_description %}
   {% assign image_description = page.header.image_description %}
 {% else %}
-  {% assign image_description = page.title %}
+  {% assign image_description = page_title %}
 {% endif %}
 
 {% assign image_description = image_description | markdownify | strip_html | strip_newlines | escape_once %}
@@ -23,7 +23,7 @@
         {% if paginator and site.paginate_show_page_num %}
           {{ site.title }}{% unless paginator.page == 1 %} {{ site.data.ui-text[site.locale].page | default: "Page" }} {{ paginator.page }}{% endunless %}
         {% else %}
-          {{ page.title | default: site.title | markdownify | remove: "<p>" | remove: "</p>" }}
+          {{ page_title | default: site.title | markdownify | remove: "<p>" | remove: "</p>" }}
         {% endif %}
       </h1>
       {% if page.tagline %}
