[FIX] ensure category names are displayed properly
Change URL format to use category ID instead of category name
Add data file to link category IDs with category names

--- a/_layouts/archive-taxonomy.html
+++ b/_layouts/archive-taxonomy.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% assign page_title = "Testing123" %}
+{% include set_page_title %}
 
 {% if page.header.overlay_color or page.header.overlay_image or page.header.image %}
   {% include page__hero.html %}
