--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -89,8 +89,15 @@
       @include clearfix();
       position: -webkit-sticky;
       position: sticky;
-      top: 2em;
+      top: 3em;
       float: right;
+      & .toc__menu {
+        overflow-y: auto;
+        /* calculate height of nav list
+           viewport height - nav height - masthead x-padding
+        */
+        max-height: calc(100vh - #{$nav-height} - 2em);
+      }
     }
   }
 
