--- a/_sass/minimal-mistakes/skins/_default.scss
+++ b/_sass/minimal-mistakes/skins/_default.scss
@@ -5,7 +5,7 @@
 /* Colors */
 $background-color: #1f1f24;
 $text-color: #eaeaea;
-$primary-color: #d68709;
+$primary-color: #ffffff;
 $border-color: mix(#fff, $background-color, 20%);
 $code-background-color: mix(#fff, $background-color, 15%);
 $code-background-color-dark: mix(#fff, $background-color, 10%);
@@ -18,6 +18,8 @@ $masthead-link-color: $text-color;
 $masthead-link-color-hover: mix(#000, $text-color, 20%);
 $masthead-link-color-hover: $link-color;
 $navicon-link-color-hover: mix(#000, $background-color, 30%);
+
+$toc-background-color: #000;
 
 .author__urls.social-icons i,
 .author__urls.social-icons .svg-inline--fa,
