--- a/_layouts/archive-taxonomy.html
+++ b/_layouts/archive-taxonomy.html
@@ -23,8 +23,10 @@ layout: default
     {% unless page.header.overlay_color or page.header.overlay_image %}
       <h1 id="page-title" class="page__title">{{ page_title }}</h1>
     {% endunless %}
-    {% for post in page.posts %}
+    {% assign page_posts = site.categories[page_title_escaped] | reverse %}
+    {% for post in page_posts %}
       {% include archive-single.html %}
     {% endfor %}
+    {{content}}
   </div>
 </div>
